[tool.poetry]
name = "rag-chatbot"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
langchain-openai = "^0.2.3"
langchain-community = "^0.3.3"
langchain = "^0.3.4"
langchain-chroma = "^0.1.4"
python-dotenv = "^1.0.1"
pypdf = "^5.1.0"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
ruff = "^0.4.8"

[tool.ruff]
line-length = 88
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .&& ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'streamlit run app.py'
pre_test = 'task lint'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"